--- a/staticfiles/templates/Task/requester.html
+++ b/staticfiles/templates/Task/requester.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
 
-</body>
-</html>
+
+<a class="btn btn-success" href="/createjob">
+    Create Job!
+</a>
