--- a/staticfiles/templates/Task/worker.html
+++ b/staticfiles/templates/Task/worker.html
@@ -1,5 +1,5 @@
 
-<<section id="Categories">
+<section id="Categories">
       <div class="row text-center">
         <h1 style="font-size: 25px;"> Task Categories</h1>
       </div>
